force-app/main/default/objects/P6_Project_Template__mdt/P6_Project_Template__mdt.object-meta.xml
<CustomObject>
    <description>Parameters for populating the values in the Flow Template [P6 Kickoff Project - Template] 
All values are available to the Flow except for the Stage Names.  These have to be generated in the Flow [P6 Kickoff Project - Generate Stage Names] and be put into the new Flow and deployed via VS Code.</description>
    <label>P6 Project Template</label>
    <pluralLabel>P6 Project Template</pluralLabel>
</CustomObject>