force-app/main/default/objects/P6_Project_Template__mdt/fields/Completion_Message__c.field-meta.xml
<CustomField>
    <fullName>Completion_Message__c</fullName>
    <inlineHelpText>If left blank, the default message will be: All tickets in this &lt;Project Name&gt; have been completed!</inlineHelpText>
    <label>Completion Message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>