force-app/main/default/objects/P6_Project_Template__mdt/fields/Line_Color__c.field-meta.xml
<CustomField>
    <fullName>Line_Color__c</fullName>
    <defaultValue>&quot;Grey&quot;</defaultValue>
    <description>Color of the separator lines in the Flow screens</description>
    <label>Line Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>