force-app/main/default/objects/P6_Project_Template__mdt/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <label>Project Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>