force-app/main/default/objects/P6_Project_Template__mdt/fields/Ticket_03_Name__c.field-meta.xml
<CustomField>
    <fullName>Ticket_03_Name__c</fullName>
    <label>Ticket_03 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>