force-app/main/default/objects/P6_Project_Template__mdt/fields/Ticket_03_Parent__c.field-meta.xml
<CustomField>
    <fullName>Ticket_03_Parent__c</fullName>
    <inlineHelpText>Use a value of 0 if this ticket should be added at Kickoff</inlineHelpText>
    <label>Ticket_03 Parent</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>