force-app/main/default/objects/P6_Project_Template__mdt/fields/Ticket_03_Process__c.field-meta.xml
<CustomField>
    <fullName>Ticket_03_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if there will be a separate sub-flow for additional processing for this ticket</inlineHelpText>
    <label>Ticket_03 Process</label>
    <type>Checkbox</type>
</CustomField>